@@ -1,4 +1,5 @@
-package com.odyxs.vg;
+package com.odyxs.vg.config;
+
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.servlet.LocaleResolver;
@@ -17,7 +18,7 @@ public class WebConfig implements WebMvcConfigurer {
     @Bean
     public LocaleResolver localeResolver() {
         SessionLocaleResolver slr = new SessionLocaleResolver();
-        slr.setDefaultLocale(new Locale("es"));
+        slr.setDefaultLocale(Locale.of("es"));
         return slr;
     }
 
@@ -35,23 +36,15 @@ public class WebConfig implements WebMvcConfigurer {
 
     @Override
     public void addResourceHandlers(ResourceHandlerRegistry registry) {
-        // Ruta absoluta del proyecto en disco (funciona en dev y en prod)
         String staticPath = "file:" + Paths.get(System.getProperty("user.dir"),
                 "src", "main", "resources", "static").toAbsolutePath() + "/";
-
-        // Imágenes subidas por el admin
         String uploadPath = "file:" + Paths.get(System.getProperty("user.dir"),
                 "src", "main", "resources", "static", "uploads").toAbsolutePath() + "/";
 
-        // /img/** → busca primero en disco, luego en classpath (jar)
         registry.addResourceHandler("/img/**")
                 .addResourceLocations(staticPath + "img/", "classpath:/static/img/");
-
-        // /uploads/** → solo en disco
         registry.addResourceHandler("/uploads/**")
                 .addResourceLocations(uploadPath);
-
-        // CSS, JS y demás estáticos
         registry.addResourceHandler("/css/**")
                 .addResourceLocations(staticPath + "css/", "classpath:/static/css/");
         registry.addResourceHandler("/js/**")
